--- a/sourse/sass/_mixin.scss
+++ b/sourse/sass/_mixin.scss
@@ -26,17 +26,18 @@
 		top: 50%;
 		bottom: auto;
 		right: auto;
-		translate: -50% -50%;
+		// translate: -50% -50%;
+		transform: translate(-50%, -50%);
 	} @else if $xy==x {
 		position: absolute;
 		left: 50%;
 		right: auto;
-		translate: -50% 0;
+		transform: translate(-50%, 0);
 	} @else if $xy==y {
 		position: absolute;
 		top: 50%;
 		bottom: auto;
-		translate: 0 -50%;
+		transform: translate(0, -50%);
 	}
 }
 
