--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -27,7 +27,10 @@
 	//  --carousel-button-svg-filter: drop-shadow(1px 1px 1px rgba(0, 0, 0/ 0.4));
 
 	// @include media-breakpoint-up(md) {
-	--sPT: calc(env(safe-area-inset-top, 0px) + #{rem(120)});
+	--sPT: calc(env(safe-area-inset-top, 0px) + #{rem(30)});
+	@include media-breakpoint-up(md) {
+		--sPT: calc(env(safe-area-inset-top, 0px) + #{rem(120)});
+	}
 	--sPB: calc(env(safe-area-inset-bottom, 0px) + 65px);
 	--sTPB: #{rem(40)};
 	// }
